force-app/main/default/objects/Field_Mapping_Detail__c/Field_Mapping_Detail__c.object-meta.xml
<CustomObject>
    <label>Field Mapping Detail</label>
    <nameField>
        <displayFormat>FMD-{0000}</displayFormat>
        <label>Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mapping Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>