force-app/main/default/objects/Field_Mapping_Detail__c/fields/Field_Mapping_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Configuration__c</fullName>
    <label>Field Mapping Configuration</label>
    <referenceTo>Field_Mapping_Configuration__c</referenceTo>
    <relationshipLabel>Field Mapping Details</relationshipLabel>
    <relationshipName>Field_Mapping_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>