force-app/main/default/objects/Field_Mapping_Detail__c/fields/From_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Field_API_Name__c</fullName>
    <label>From Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>