force-app/main/default/objects/Field_Mapping_Detail__c/fields/To_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>To_Field_Type__c</fullName>
    <label>To Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>